# python-project-lvl1

./: README.md  makefile  pyproject.toml
.github/workflows/: brain-lint.yml
brain_games/: engine.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  cli.py  engine.py  rnd_engine.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  cli.py  rnd_engine.py
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
