[tool.poetry]
name = "hexlet_code"
version = "0.1.0"
description = ""
authors = ["angekok"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = ">=3.8.5"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.2"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

